Fix documents groups spacing

--- a/src/sass/components/_elements.scss
+++ b/src/sass/components/_elements.scss
@@ -909,6 +909,10 @@ div.table-list.boards {
       }
     }
   }
+
+  .document-group:not(:last-child) {
+    margin-bottom: variables.$line-height-computed;
+  }
 }
 
 
